--- a/index.html
+++ b/index.html
@@ -1,49 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="./Image/logo.svg" type="image/x-icon">
-
-    <title>Rick and Morty API</title>
-
-    <link rel="stylesheet" href="./Css/style.css">
+    <title>Meu Site</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-    <header class="header">
-            <nav class="navbar container">
-                <a href="./index.html">
-                    <img src="./Image/logo.svg" alt="imagem logo">
-                </a>
+    <header>
+        <nav class="navbar">
+            <img class="imglogo" src="./image/logo.svg" alt="">
+            <ul class="navmenu">
+                <li class="nav-item"><a href="a" class="nav-link">HOUSES</a></li>
+                <li class="nav-item"><a href="a" class="nav-link">SPELLS</a></li>
+                <li class="nav-item"><a href="a" class="nav-link">WIZARDS</a></li>
+            </ul>
 
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link"  href="">Docs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"  href="">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-btn"  href="">SUPPORT US</a>
-                    </li>
-                </ul>
-            </nav>
-
+            <div class="hamburguer">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
     </header>
 
-    <main class="container">
-        <section class="hero">
-              <h1>The Rick and Morty API</h1>
-        </section>
-        <section class="character-container" id="character-container">
+    <div class="main">
+        <div>
+            <img class="harryprofile" src="./image/harrypotter.svg" alt="">
+        </div>
 
-        </section>
-    </main>
 
-    <script src="./Js/app.js"></script>
+
+
+        
+        <div class="primeirodoispara">
+            <div class="sexo2"></div>
+            <div class="wizardworld">
+                <h1>WIZARD WORLD:</h1>
+                <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem
+                    sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
+                    embaralhou para fazer um livro de modelos de tipos.</p>
+            </div>
+            <div class="feito">
+                <h1>FEITO POR QUEM?</h1>
+                <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem
+                    sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os
+                    embaralhou para fazer um livro de modelos de tipos.</p>
+            </div>
+        </div>
+        <div class="sexo"><p><strong>Sobre</strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quia repudiandae quos voluptas temporibus assumenda qui voluptatibus ex est doloremque accusantium voluptatem expedita harum, dignissimos cum facere animi distinctio nulla.</p></div>
+    </div>
+
+    <footer>
+        <p>© 2024 Meu Site. Todos os direitos reservados.</p>
+        <div>
+            <img src="image/R-removebg-preview 1.svg" alt="">
+        </div>
+    </footer>
+
+
 </body>
+
 </html>
